Bug 1432385 - Use window manager borders on LXQt, r=jhorak

MozReview-Commit-ID: JkyBMBovCIG